# kg-gen

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
experiments/wikiqa/utils/: cluster_and_deduplication.py
src/kg_gen/: __init__.py  deduplication.py  kg_gen.py  kg_gen_langchain.py  langchain_runner.py  models.py
src/kg_gen.egg-info/: PKG-INFO
src/kg_gen/config/: dbpedia_types_subset.json
src/kg_gen/lc_steps/: cluster_graph.py  get_entities.py
src/kg_gen/steps/: _1_get_entities.py  _2_get_relations.py  _3_cluster_graph.py  _3_deduplicate.py
src/kg_gen/utils/: deduplicate.py  score_relations.py  visualize_kg.py
src/kg_gen_lc/: __init__.py  kg_gen_langchain.py
src/kg_gen_lc/lc_steps/: cluster_graph.py  get_relations.py
tests/: .env.example  run_kg_extraction.py  test_custom_api_base.py  test_deduplication.py  test_deduplication_integration.py  test_relation_scores.py
tests/data/: ESCP_London_Overview.txt
tests/data/wiki_qa/articles_kg/: African_immigration_to_the_United_States.json  Cardiovascular_disease.json  Harmon_Killebrew.json  History_of_immigration_to_the_United_States.json  Interlibrary_loan.json  Lolita_1962_film.json  MacConkey_agar.json  Mexican_peso.json  Pertussis.json  Pump.json  antibody.json
