[project]
name = "kg-gen"
version = "0.2.1"
authors = [
  { name="Belinda Mo", email="justanexperimentpark@gmail.com" },
]
description = "Extract a knowledge graph using LLMs from any text or messages array"
readme = "README.md"
requires-python = ">=3.10, <4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "MIT"
dependencies = [
    "dspy>=2.6.24",
    "nltk",
    "pydantic>=2.0.0",
    "openai>=1.61.0"
]

[project.optional-dependencies]
dev = [
    "pyvis==0.3.2"
]

# Latest versions
latest = [
    "dspy>=3.0.2",
    "openai>=1.101.0",
]

# Latest versions
vllm = [
    "dspy>=3.0.2",
    "fastapi-sso>=0.16.0",
    "litellm[proxy]>=1.75.9",
    "openai>=1.101.0",
    "vllm>=0.10.1.1",
]

[project.urls]
Homepage = "https://github.com/stair-lab/kg-gen"
Issues = "https://github.com/stair-lab/kg-gen/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"